# advent-2021

./: .gitignore  Cargo.toml  README.md  advent2021.cabal  index.html
.github/workflows/: pipeline.yml
app/: Main.hs
assets/: style.css
day/day01/src/: lib.rs
src/: AoC.hs  main.rs
src/days/: day01.dyalog  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day10.rs  mod.rs
