cabal-version:      2.4
name:               advent2021
version:            1.0.0
build-type:         Simple
synopsis:           Advent of Code 2021
description:        Advent of Code 2021
homepage:           https://github.com/sondr3/advent-2021/
license:            MIT
license-file:       LICENSE
author:             Sondre Nilsen
maintainer:         sondre@eons.io
extra-source-files:
    README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/advent-2021.git

common config
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -Werror=missing-deriving-strategies
    -fwrite-ide-info -Wunused-packages

  build-depends:
    , base        ^>=4.15
    , containers  ^>=0.6
    , megaparsec  ^>=9.2
    , split       ^>=0.2
    , text        ^>=1.2

library
  import:           config
  exposed-modules:  AoC
  hs-source-dirs:   src

executable advent2021
  import:           config
  main-is:          Main.hs
  build-depends:    advent2021
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite advent2021-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover ^>=2.9
  build-depends:
    , advent2021
    , hspec             ^>=2.9
    , hspec-megaparsec  ^>=2.2
